--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -31,8 +31,8 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1>Multiple Visualisations</h1>
-        <p>This page demonstrates how you can use pure.css grid for your layout.</p>
+        <h1>World life expectancy</h1>
+        <p>World life expectancy is a critical metric reflecting the average number of years an individual can expect to live, and it serves as an essential indicator of a population's overall health and well-being. As of my last knowledge update in September 2021, the global average life expectancy was approximately 72-73 years. This statistic is not uniform worldwide, exhibiting significant regional disparities influenced by various factors.</p>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -102,8 +102,8 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "./normalised-stacked-bars-responsive.json";
-    var specVis2 = "./line-chart-responsive.json";
+    var specVis1 = "./scatter.json";
+    var specVis2 = "./Map for life expectancy.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
