--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -44,8 +44,8 @@
         <p> From the map idioms, we can see that Europe country has higher life expectancy. </p>
       </div>
     </div>
-    <div class="pure-u-1-2">
-      <div id="vis1" class="vis-container"></div>
+    <div class="pure-u-1-3" style="width: 31.5%;">
+      <div id="vis1" class="vis-container" style="margin-left: 15px;"></div>
     </div>
     
     <!-- end pure grid group -->
@@ -65,17 +65,7 @@
       </div>
 
     </div>
-    <!-- end pure grid group -->
 
-    <div class="pure-g">
-      <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://fit3179.github.io/Vega-Lite/" target="_blank">FIT3179
-            Teaching Team</a>. The datasource is <a href="#" target=" _blank">some data repository online</href>.</p>
-      </div>
-    </div>
-
-
-  </div> <!-- end page -->
 
   <script type="text/javascript">
     var specVis1 = "./scatter.json";
