--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -44,7 +44,7 @@
         <p> From the map idioms, we can see that Europe country has higher life expectancy. </p>
       </div>
     </div>
-    <div class="pure-u-1-3" style="width: 20.5%;">
+    <div class="pure-u-1-3" style="width: 50%;">
       <div id="vis1" class="vis-container" style="margin-left: 15px;"></div>
     </div>
     
@@ -61,9 +61,9 @@
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
         </div>
       </div>
-      <div class="pure-u-1-2">
-        <div id="vis2" class="vis-container"></div>
-      </div>
+      <div class="pure-u-1-2" style="width: 50%;">
+      <div id="vis2" class="vis-container" style="margin-left: 15px;"></div>
+    </div>
     </div>
 
 
