--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -45,25 +45,25 @@
       </div>
     </div>
     <div class="pure-u-1-3" style="width: 50%;">
-      <div id="vis1" class="vis-container" style="margin-left: 15px;"></div>
+      <div id="vis1" class="vis-container" style="margin-left: 400px;"></div>
     </div>
     
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-2">
-        <div class="description description-left">
-          <h2>Two Columns Layout</h2>
-          <p>The first column contains text and the second column contains a visualisation.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+      <div class="pure-u-2-3">
+        <div id="vis2" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right">
+          <h2>First and Second Columns Combined</h2>
+          <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
+            faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
         </div>
       </div>
-      <div class="pure-u-1-2" style="width: 50%;">
-      <div id="vis2" class="vis-container" style="margin-left: 15px;"></div>
-    </div>
+
     </div>
 
 
