--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="pure-u-1-1" style="width: 50%;">
-      <div id="vis1" class="vis-container" style="margin-left: 1px;"></div>
+      <div id="vis1" class="vis-container" style="width: 300px; height: 200px;"></div>
     </div>
     
     <!-- end pure grid group -->
