--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="pure-u-1-1" style="width: 50%;">
-      <div id="vis1" class="vis-container" style="width: 300px; height: 200px;"></div>
+       <div id="vis1" class="vis-container" style="margin-right: 15px;"></div>
     </div>
     
     <!-- end pure grid group -->
@@ -55,10 +55,8 @@
       
       <div class="pure-u-1-5">
         <div class="description description-right">
-          <h2>First and Second Columns Combined</h2>
-          <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
-            faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+          <h2>Does GDP and Life expectancy have any correlation?</h2>
+          <p>The bubble plot shows that they have a positive correlation.</p>
         </div>
       </div>
       <div class="pure-u-2-3">
