--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -63,11 +63,39 @@
         <div id="vis2" class="vis-container"></div>
       </div>
     </div>
+  <!-- pure grid group -->
+    <div class="pure-g">
+      
+      <div class="pure-u-1-5">
+        <div class="description description-right">
+          <h2>Does GDP and Life expectancy have any correlation?</h2>
+          <p>The bubble plot shows that they have a positive correlation.</p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="vis3" class="vis-container"></div>
+      </div>
+    </div>
+  <!-- pure grid group -->
+    <div class="pure-g">
+      
+      <div class="pure-u-1-5">
+        <div class="description description-right">
+          <h2>Does GDP and Life expectancy have any correlation?</h2>
+          <p>The bubble plot shows that they have a positive correlation.</p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="vis4" class="vis-container"></div>
+      </div>
+    </div>
 
 
   <script type="text/javascript">
     var specVis1 = "./scatter.json";
     var specVis2 = "./Map for life expectancy.json";
+    var specVis3 = "./donut.json";
+    var specVis4 = "./line.json";
 
     vegaEmbed('#vis1', specVis2, { "actions": false });
 
