--- a/week 10_hw/index.html
+++ b/week 10_hw/index.html
@@ -98,7 +98,8 @@
     var specVis4 = "./line.json";
 
     vegaEmbed('#vis1', specVis2, { "actions": false });
-
+    vegaEmbed('#vis3', specVis2, { "actions": false });
+    vegaEmbed('#vis4', specVis2, { "actions": false });
     vegaEmbed('#vis2', specVis1, { "actions": false }).then(function (result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
