--- a/Data Visualisation 2/index.html
+++ b/Data Visualisation 2/index.html
@@ -106,7 +106,7 @@
 
   <script type="text/javascript">
     var specVis1 = "./scatter.json";
-    var specVis2 = "./Map.json";
+    var specVis2 = "./Map for life expectancy.json";
     var specVis3 = "./donut.json";
     var specVis4 = "./line.json";
     var specVis5 = "./histogram.json";
